<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_drawable"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/Wyjscie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="625dp"
            android:layout_marginRight="50dp"
            android:text="@string/wyjscie"
            android:textColor="#FFEB3B"
            app:backgroundTint="#3E3939" />

        <TextView
            android:id="@+id/SwiatloText"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:minHeight="48dip"
            android:text="@string/swiatlo"
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/WentylatoryText"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:minHeight="48dip"
            android:text="@string/wentylatory"
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/GniazdaText"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="175dp"
            android:gravity="center"
            android:text="@string/gniazda"
            android:textSize="20sp"
            android:minHeight="48dip"
            android:textColor="#3E3939" />

        <TextView
            android:id="@+id/TemperaturaText"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="250dp"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dip"
            android:text="@string/temperatura"
            android:textColor="#3E3939"
            android:textSize="20sp"
            android:focusable="true" />

        <TextView
            android:id="@+id/WilgotnoscText"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="325dp"
            android:gravity="center"
            android:minHeight="48dip"
            android:text="@string/wilgotnosc"
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <Button
            android:id="@+id/WilgotnoscGlebyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="400dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/wilgotnosc_gleby_roslin"
            app:backgroundTint="#3E3939"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/WilgotnoscImport"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="325dp"
            android:gravity="center"
            android:minHeight="48dip"
            android:text=""
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TemperaturaImport"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:minHeight="48dip"
            android:text=""
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/DateTextView"
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="475dp"
            android:gravity="center"
            android:minHeight="48dip"
            android:textColor="#3E3939"
            android:textSize="20sp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp" />

        <TextClock
            android:id="@+id/TimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="550dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="time"
            android:minHeight="48dip"
            android:textColor="#3E3939"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <Switch
            android:id="@+id/switchSwiatlo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="34dp"
            android:scaleX="2"
            android:scaleY="2" />

        <Switch
            android:id="@+id/switchWentyl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="110dp"
            android:scaleX="2"
            android:scaleY="2" />

        <Switch
            android:id="@+id/switchGniazdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="275dp"
            android:layout_marginTop="185dp"
            android:scaleX="2"
            android:scaleY="2" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>