<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_drawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="349dp"
            android:layout_height="135dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:shadowColor="#0E0000"
            android:text="@string/naglowek"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="30sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="312dp"
            android:layout_height="46dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/adres_ip"
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <EditText
            android:hint="@string/haslo"
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="450dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#3E3939" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="312dp"
            android:layout_height="46dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <EditText
            android:hint="@string/adres_ip"
            android:id="@+id/InputIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#3E3939"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="312dp"
            android:layout_height="46dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/haslo"
            android:textColor="#3E3939"
            android:textSize="20sp" />

        <EditText
            android:hint="@string/login"
            android:id="@+id/InputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#3E3939"
            android:autofillHints="" />

        <Button
            android:id="@+id/ConnectedBtn"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/polacz"
            android:textColor="#FFEB3B"
            app:backgroundTint="#3E3939" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>