<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@drawable/gradient_drawable">

    <ImageView
        android:id="@+id/mainImageView"
        android:layout_width="169dp"
        android:layout_height="159dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="121dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pobrane2" />

    <TextView
        android:id="@+id/description"
        android:layout_width="315dp"
        android:layout_height="350dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:elegantTextHeight="false"
        android:text="@string/textview"
        android:textColor="#3E3939"
        android:textStyle="normal"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="395dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#3E3939"
        android:textSize="26sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImageView" />

    <Button
        android:id="@+id/Cofnij"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/cofnij"
        android:textColor="#FFEB3B"
        app:backgroundTint="#3E3939"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.652" />
</androidx.constraintlayout.widget.ConstraintLayout>